# Open-Reality

./: .bazelrc  .gitignore  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  Manifest.toml  Project.toml  README.md  codecov.yml  neomake.tomlx
.github/workflows/: ci.yml
bazel/: bun.bzl  julia.bzl
bazel/bun/: BUILD.bazel  bun_repository.bzl  extensions.bzl  toolchain.bzl
bazel/julia/: BUILD.bazel  extensions.bzl  julia_repository.bzl  toolchain.bzl
docs/: api-reference.md  architecture.md  cli-reference.md  examples.md  getting-started.md
examples/: BUILD.bazel  basic_scene.jl  dungeon_crawler.jl  instancing_demo.jl  maze_game.jl  physics_demo.jl  render_graph_opengl.jl  render_graph_vulkan.jl  render_graph_webgpu.jl  scripting_demo.jl  threading_demo.jl  ui_showcase.jl  vulkan_features_showcase.jl  wasm_export_test.jl  webgpu_basic_scene.jl  webgpu_features_test.jl  webgpu_pbr_showcase.jl  webgpu_test.jl
ext/: OpenRealityVulkanExt.jl
metal_bridge/: BUILD.bazel
open-reality-website/: BUILD.bazel  nuxt.config.ts
open-reality-website/__tests__/components/: DocsSidebar.spec.ts
open-reality-website/app/components/: DocsSidebar.vue  HeroSection.vue  NavBar.vue
open-reality-website/app/pages/: demo.vue  index.vue
open-reality-website/app/pages/docs/: architecture.vue  audio.vue  cli.vue  components.vue  gameplay.vue  index.vue  physics.vue  rendering.vue  scripting.vue  systems.vue  terrain.vue
open-reality-website/public/demo/: openreality_web.js  openreality_web_bg.wasm  scene.orsb
openreality-cli/: Cargo.toml
openreality-cli/src/: app.rs  build.rs  cli.rs  detect.rs  event.rs  main.rs  runner.rs  state.rs
openreality-cli/src/commands/: build_cmd.rs  export.rs  mod.rs  package.rs
openreality-cli/src/ui/: build_view.rs  dashboard.rs  help.rs  log_panel.rs  mod.rs  run_view.rs  setup_view.rs  status.rs
openreality-gpu-shared/shaders/: bloom_blur.wgsl  bloom_composite.wgsl  bloom_extract.wgsl  debug_lines.wgsl  dof.wgsl  forward_pbr.wgsl  gbuffer_frag.wgsl  gbuffer_instanced_vert.wgsl  gbuffer_skinned_vert.wgsl  motion_blur.wgsl  particle.wgsl  present.wgsl  terrain_gbuffer.wgsl  ui.wgsl
openreality-gpu-shared/src/: scene_format.rs  shaders.rs  uniforms.rs
openreality-render/: Cargo.toml
openreality-render/src/: handle.rs  ibl.rs  lib.rs  pipeline.rs  render_targets.rs  scene_renderer.rs  types.rs
openreality-render/src/passes/: dof.rs  forward.rs  gbuffer.rs  lighting.rs  motion_blur.rs  particles.rs  postprocess.rs  shadow.rs  ssao.rs  ssr.rs  taa.rs  terrain.rs
openreality-web/: Cargo.toml  scene.orsb  test_wasm.mjs
openreality-web/src/: app.rs  input.rs  lib.rs  scene.rs
openreality-web/src/scripting/: engine.rs  game_state.rs  host_api.rs  mod.rs  ui_api.rs
openreality-wgpu/: Cargo.toml
openreality-wgpu/src/: backend.rs  lib.rs  pipeline.rs  render_targets.rs
openreality-wgpu/src/passes/: debug_lines.rs  dof.rs  forward.rs  gbuffer.rs  lighting.rs  mod.rs  motion_blur.rs  postprocess.rs  present.rs  shadow.rs  ssao.rs  ssr.rs  taa.rs  terrain.rs  ui.rs
src/: OpenReality.jl  ecs.jl  scene.jl  threading.jl
src/audio/: openal_backend.jl
src/backend/: opengl.jl
src/backend/opengl/: opengl_capture.jl  opengl_gpu_particles.jl  opengl_graph_executor.jl  opengl_graph_passes.jl  opengl_pbr.jl  opengl_ui.jl
src/backend/vulkan/: vulkan_backend.jl  vulkan_capture.jl  vulkan_debug_draw.jl  vulkan_deferred.jl  vulkan_device.jl  vulkan_dof.jl  vulkan_framebuffer.jl  vulkan_graph_executor.jl  vulkan_graph_passes.jl  vulkan_ibl.jl  vulkan_instancing.jl  vulkan_memory.jl  vulkan_mesh.jl  vulkan_motion_blur.jl  vulkan_particles.jl  vulkan_pbr.jl  vulkan_postprocess.jl  vulkan_shader.jl  vulkan_shadows.jl  vulkan_swapchain.jl  vulkan_taa.jl  vulkan_terrain.jl  vulkan_texture.jl  vulkan_types.jl  vulkan_ui.jl  vulkan_uniforms.jl
src/backend/webgpu/: webgpu_backend.jl  webgpu_ffi.jl  webgpu_graph_executor.jl  webgpu_graph_passes.jl  webgpu_types.jl
src/components/: animation.jl  animation_blend_tree.jl  camera.jl  camera_controller.jl  collider.jl  material.jl  mesh.jl  player.jl  primitives.jl  rigidbody.jl  script.jl  transform.jl
src/debug/: debug_draw.jl
src/export/: asset_pipeline.jl  scene_export.jl  script_transpiler.jl  webscript_macro.jl
src/game/: context.jl  debug_console.jl  dialogue.jl  event_bus.jl  game_manager.jl  prefab.jl  quests.jl  state_machine.jl
src/loading/: asset_manager.jl  async_loader.jl  gltf_loader.jl  loader.jl  obj_loader.jl
src/math/: transforms.jl
src/physics/: broadphase.jl  ccd.jl  collision_callbacks.jl  constraints.jl  contact.jl  gjk_epa.jl  guards.jl  inertia.jl  islands.jl  narrowphase.jl  raycast.jl  shapes.jl  solver.jl  triggers.jl  types.jl  world.jl
src/procgen/: chunk_streaming.jl
src/rendering/: camera_utils.jl  deferred.jl  deferred_graph.jl  frame_preparation.jl  framebuffer.jl  frustum_culling.jl  gpu_resources.jl  pbr_pipeline.jl  pipeline.jl  post_processing.jl  render_graph.jl  render_graph_executor.jl  shader.jl  shader_variants.jl  shadow_map.jl  ssao.jl  ssr.jl  texture.jl
src/scheduler/: eevdf_scheduler.jl  eevdf_task.jl  global.jl  snapshots.jl
src/serialization/: save_load.jl
src/systems/: animation.jl  animation_blend_tree.jl  camera_controller.jl  particles.jl  physics.jl  player_controller.jl  scripts.jl  skinning.jl
src/ui/: font.jl  types.jl  widgets.jl
src/windowing/: glfw.jl  input.jl  input_mapping.jl
test/: runtests.jl
test/visual/: visual_tests.jl
