load("//bazel:julia.bzl", "julia_precompile", "julia_test")

# ============================================================
# Exported manifest files (referenced by other BUILD files)
# ============================================================

exports_files(
    [
        "Project.toml",
        "Manifest.toml",
        "Cargo.toml",
        "Cargo.lock",
    ],
    visibility = ["//visibility:public"],
)

# ============================================================
# Julia Engine
# ============================================================

julia_precompile(
    name = "precompile",
    project_toml = "//:Project.toml",
    manifest_toml = "//:Manifest.toml",
    srcs = ["//src:julia_sources"],
    visibility = ["//visibility:public"],
)

julia_test(
    name = "julia_tests",
    src = "//test:runtests.jl",
    project_toml = "//:Project.toml",
    manifest_toml = "//:Manifest.toml",
    srcs = ["//src:julia_sources"],
    depot = [":precompile"],
    data = [
        "//openreality-wgpu:openreality_wgpu",
    ] + select({
        "@platforms//os:macos": ["//metal_bridge:MetalBridge"],
        "//conditions:default": [],
    }),
    tags = [
        "no-sandbox",
        "local",
    ],
)

# ============================================================
# Convenience Aliases
# ============================================================

alias(
    name = "cli",
    actual = "//openreality-cli:orcli",
)

alias(
    name = "wasm",
    actual = "//openreality-web:openreality_web_pkg",
    tags = ["manual"],
)

alias(
    name = "swift_tests",
    actual = "//metal_bridge:MetalBridgeTests",
)
