load("//bazel:julia.bzl", "julia_run")

# Each example is a runnable Julia script.
# Run with: bazel run //examples:<name>

julia_run(
    name = "basic_scene",
    src = "basic_scene.jl",
    project_toml = "//:Project.toml",
    srcs = ["//src:julia_sources"],
    depot = ["//:precompile"],
)

julia_run(
    name = "pbr_showcase",
    src = "pbr_showcase.jl",
    project_toml = "//:Project.toml",
    srcs = ["//src:julia_sources"],
    depot = ["//:precompile"],
)

julia_run(
    name = "features_showcase",
    src = "features_showcase.jl",
    project_toml = "//:Project.toml",
    srcs = ["//src:julia_sources"],
    depot = ["//:precompile"],
)

julia_run(
    name = "physics_demo",
    src = "physics_demo.jl",
    project_toml = "//:Project.toml",
    srcs = ["//src:julia_sources"],
    depot = ["//:precompile"],
)

julia_run(
    name = "boulder_scene",
    src = "boulder_scene.jl",
    project_toml = "//:Project.toml",
    srcs = ["//src:julia_sources"],
    depot = ["//:precompile"],
)

julia_run(
    name = "postfx_demo",
    src = "postfx_demo.jl",
    project_toml = "//:Project.toml",
    srcs = ["//src:julia_sources"],
    depot = ["//:precompile"],
)

julia_run(
    name = "terrain_demo",
    src = "terrain_demo.jl",
    project_toml = "//:Project.toml",
    srcs = ["//src:julia_sources"],
    depot = ["//:precompile"],
)

julia_run(
    name = "lod_demo",
    src = "lod_demo.jl",
    project_toml = "//:Project.toml",
    srcs = ["//src:julia_sources"],
    depot = ["//:precompile"],
)

julia_run(
    name = "instancing_demo",
    src = "instancing_demo.jl",
    project_toml = "//:Project.toml",
    srcs = ["//src:julia_sources"],
    depot = ["//:precompile"],
)

julia_run(
    name = "webgpu_test",
    src = "webgpu_test.jl",
    project_toml = "//:Project.toml",
    srcs = ["//src:julia_sources"],
    data = ["//openreality-wgpu:openreality_wgpu"],
    depot = ["//:precompile"],
)

julia_run(
    name = "metal_test",
    src = "metal_test.jl",
    project_toml = "//:Project.toml",
    srcs = ["//src:julia_sources"],
    data = select({
        "@platforms//os:macos": ["//metal_bridge:MetalBridge"],
        "//conditions:default": [],
    }),
    depot = ["//:precompile"],
)

julia_run(
    name = "vulkan_test",
    src = "vulkan_test.jl",
    project_toml = "//:Project.toml",
    srcs = ["//src:julia_sources"],
    depot = ["//:precompile"],
)

julia_run(
    name = "vulkan_minimal_test",
    src = "vulkan_minimal_test.jl",
    project_toml = "//:Project.toml",
    srcs = ["//src:julia_sources"],
    depot = ["//:precompile"],
)

julia_run(
    name = "wasm_export_test",
    src = "wasm_export_test.jl",
    project_toml = "//:Project.toml",
    srcs = ["//src:julia_sources"],
    depot = ["//:precompile"],
)
