# Metal backend bridge -- macOS only.
# Native rules_swift targets for the MetalBridge Swift library and tests.

load("@rules_swift//swift:swift.bzl", "swift_library", "swift_test")

swift_library(
    name = "MetalBridge",
    srcs = glob(["Sources/MetalBridge/**/*.swift"]),
    linkopts = [
        "-framework", "Metal",
        "-framework", "MetalKit",
        "-framework", "QuartzCore",
        "-framework", "AppKit",
    ],
    module_name = "MetalBridge",
    target_compatible_with = [
        "@platforms//os:macos",
    ],
    visibility = ["//visibility:public"],
)

swift_test(
    name = "MetalBridgeTests",
    srcs = glob(["Tests/MetalBridgeTests/**/*.swift"]),
    deps = [":MetalBridge"],
    target_compatible_with = [
        "@platforms//os:macos",
    ],
    tags = [
        "no-sandbox",
        "local",
    ],
    visibility = ["//visibility:public"],
)
